crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@296.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select nummultirange(numrange(1,2), numrange(4,5)) << nummultirange(numrange(3,4), numrange(7,8));"
---
SelectStmt@0..98
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..95
    AExpr@7..95
      FuncCall@7..48
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
        Ascii41@33..34 ")"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        FuncCall@36..48
          Ident@36..44 "numrange"
          Ascii40@44..45 "("
          AConst@45..46
            Iconst@45..46 "4"
          Ascii44@46..47 ","
          AConst@47..48
            Iconst@47..48 "5"
      Ascii41@48..49 ")"
      Ascii41@49..50 ")"
      Whitespace@50..51 " "
      Op@51..53 "<<"
      Whitespace@53..54 " "
      FuncCall@54..95
        Ident@54..67 "nummultirange"
        Ascii40@67..68 "("
        FuncCall@68..80
          Ident@68..76 "numrange"
          Ascii40@76..77 "("
          AConst@77..78
            Iconst@77..78 "3"
          Ascii44@78..79 ","
          AConst@79..80
            Iconst@79..80 "4"
        Ascii41@80..81 ")"
        Ascii44@81..82 ","
        Whitespace@82..83 " "
        FuncCall@83..95
          Ident@83..91 "numrange"
          Ascii40@91..92 "("
          AConst@92..93
            Iconst@92..93 "7"
          Ascii44@93..94 ","
          AConst@94..95
            Iconst@94..95 "8"
  Ascii41@95..96 ")"
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

